Fixed button selector text wrap around by specifiying minimum width

--- a/client/src/components/button/ButtonOutlined/ButtonOutlined.scss
+++ b/client/src/components/button/ButtonOutlined/ButtonOutlined.scss
@@ -17,7 +17,6 @@
   border-width: 4px;
   border-color: var(--light-purple);
   border-style: solid;
-  word-break: break-all;
 
   &:hover {
     transform: scale(1.02);
